<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/primary_light"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/search_box_icon_top_and_bottom_padding"
            android:paddingBottom="@dimen/search_box_icon_top_and_bottom_padding"
            android:layout_marginStart="@dimen/search_box_icon_left_and_right_margin"
            android:layout_marginEnd="@dimen/search_box_icon_left_and_right_margin"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/img_search_dialog_description"
            android:src="@drawable/ic_search_dialog" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/search_box_title_text_size"
            android:layout_gravity="center_vertical"
            android:text="@string/find_a_game_dialog_title" />
    </LinearLayout>

    <EditText
        android:id="@+id/board_game_to_find"
        android:inputType="textAutoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_box_edit_top_margin"
        android:layout_marginStart="@dimen/search_box_edit_margins"
        android:layout_marginEnd="@dimen/search_box_edit_margins"
        android:layout_marginBottom="@dimen/search_box_edit_margins"
        android:hint="@string/find_a_game_dialog_hint" />

</LinearLayout>