<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <FrameLayout
        android:id="@+id/appwidget_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/appwidget_preview_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_appwidget_background_description"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_appwidget_background_protection_description"
            android:background="@drawable/photo_background_protection" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/appwidget_game_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:contentDescription="@string/appwidget_default_text"
                android:text="@string/appwidget_default_text"
                android:textColor="@color/primary_text"
                android:textSize="24sp"
                android:textStyle="bold|italic" />
            <TextView
                android:id="@+id/appwidget_game_details"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>